# kryptosm

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Makefile  OUTPUT.md  README.md  pyproject.toml
.github/workflows/: pages.yml  release-build-tag.yml
examples/: README.md  glue_apply_osc.py  glue_init.py
kryptosm/: __init__.py  cli.py  geometry.py  iceberg.py  inspect.py  main.py  osc.py  replication.py  spark.py  sync.py
kryptosm/geometry/: __init__.py  iceberg_prep.py  nodes.py  osc_apply.py  relations.py  samples.py  ways.py
slides/: 01-title.md  01b-name.md  02-what-it-does.md  03-schema.md  04-index-tables.md  04-init.md  05-incremental.md  05-init.md  06-geometry.md  06-inspect.md  07-hygiene.md  07-tenets.md  08-incremental.md  09-dirty-set.md  10-changesets.md  11-inspect.md  12-tenets.md  config.yaml
tests/: E2E_TESTS.md  OUTPUT_LOCATIONS.md  README.md  __init__.py  run_tests.py  test_basic.py  test_e2e.py  test_e2e_init.py  test_e2e_nodes.py  test_e2e_osc.py  test_e2e_osc_all.py  test_e2e_relations.py  test_e2e_sync.py  test_e2e_ways.py  test_imports.py  test_inspect.py  test_parquet_integration.py  test_parquet_runner.py  test_parquet_simple.py  test_replication.py
tests/data/WashingtonDC/: changeset_1.xml
